testcases/compiler2015/Phase2/CompileError/naive1-5110379024-wuhang.c
/** REMARK: Cannot define a void-type variable.
 *
**/

int main()
{
    void a;
}
